# cam-overlay

./: .gitignore  Cargo.toml  README.md  io.github.didley.CamOverlay.yml  justfile  meson.build
build-aux/: cargo.sh
data/: io.github.didley.CamOverlay.desktop.in  io.github.didley.CamOverlay.gschema.xml  io.github.didley.CamOverlay.metainfo.xml  meson.build  style.css
src/: application.rs  capture.rs  config.rs  config.rs.in  main.rs  menu.rs  renderer.rs  settings.rs  shader.wgsl  window.rs
