[package]
name = "cam-overlay"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "cam-overlay"
path = "src/main.rs"

[dependencies]
winit = { version = "0.30", features = ["rwh_06"] }
wgpu = "24"
nokhwa = { version = "0.10", features = ["input-native"] }
confy = "0.6"
serde = { version = "1", features = ["derive"] }
pollster = "0.4"
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
